# weather_app

./: .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/backend/: config.py  settings.py  urls.py
backend/backend/apps/account/: models.py  serializers.py  urls.py  views.py
backend/backend/apps/account/migrations/: 0001_initial.py
backend/backend/apps/weather/: api.py  apps.py  urls.py  views.py
backend/tests/: fixtures.py  settings.py  test_favourite_coords.py  test_login.py  test_weather.py
infra/: .gitignore  main.tf  terragrunt.hcl  upload-to-ecr.sh
infra/dev/: .terraform.lock.hcl  terragrunt.hcl
infra/shared/: terragrunt.hcl
infra/tf_files/envs/: backend.tf  main.tf  rds.tf  roles.tf  vpc.tf
infra/tf_files/shared/: ecr.tf  iam.tf  main.tf
